https://github.com/WWBN/AVideo/pull/8020

--- a/view/css/custom/netflix.css
+++ b/view/css/custom/netflix.css
@@ -64,3 +64,6 @@ span.selection > span.select2-selection--single{
     border-color: transparent;
     border: none;
 }
+.is_advanced {
+    color: #FFF;
+}
