--- a/view/css/navbar.css
+++ b/view/css/navbar.css
@@ -219,7 +219,7 @@ li.navsub-toggle a + ul {
 
 @media screen and (min-width: 992px) {
 
-    body.youtube>div.container-fluid{
+    body.youtube{
         margin-left: 300px;
     }
     body.youtube div.container-fluid .col-sm-10.col-sm-offset-1.list-group-item{
