--- a/view/css/main.css
+++ b/view/css/main.css
@@ -1955,3 +1955,7 @@ button.btn-sm.hamburger svg {
     width: 22px;
     height: 22px;
 }
+
+.HorizontalFlickity,.HorizontalFlickity .flickity-viewport{
+    min-height: 50px;
+}
