--- a/view/css/custom/solar.css
+++ b/view/css/custom/solar.css
@@ -20,3 +20,8 @@ span.selection > span.select2-selection--single{
     background-color: #586e75;
     border-color: #586e75;
 }
+
+th > a > span.text, 
+.bootgrid-table th > .column-header-anchor{
+    color: #FFF;
+}
