--- a/view/css/main.css
+++ b/view/css/main.css
@@ -74,6 +74,7 @@ time.duration {
     z-index: 1;
     top: -5px;
     border-radius: unset;
+    margin-bottom: 0;
 }
 
 .videoLink .glyphicon-play-circle {
@@ -902,6 +903,26 @@ img.blur {
     display: block;
 }
 
+#CloseButtonInVideo {
+    display: none;
+    z-index: 9999;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    color: #333;
+    border-radius: 50%;
+}
+#CloseButtonInVideo:hover {
+    background-color: rgba(255, 255, 255, 1);
+    color: #000;
+}
+.vjs-user-active #CloseButtonInVideo,
+.vjs-paused #CloseButtonInVideo,
+body>#CloseButtonInVideo {
+    display: inline-block;
+}
+
 .rightProfile li a {
     text-align: left;
 }
@@ -1255,6 +1276,7 @@ li.dropdown-submenu>ul>li>a {
     height: calc(100% - 150px);
 }
 
+/* Common styles for swal-content inside various swal-modal classes */
 .swal-modal.swal-modal-iframe .swal-content,
 .swal-modal.swal-modal-iframe-xsmall .swal-content,
 .swal-modal.swal-modal-iframe-small .swal-content,
@@ -1264,8 +1286,11 @@ li.dropdown-submenu>ul>li>a {
 .swal-modal.swal-modal-iframe-full-transparent .swal-content {
     width: 100%;
     height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
+/* Common styles for iframes inside various swal-modal classes */
 .swal-modal.swal-modal-iframe iframe,
 .swal-modal.swal-modal-iframe-xsmall iframe,
 .swal-modal.swal-modal-iframe-small iframe,
@@ -1277,33 +1302,35 @@ li.dropdown-submenu>ul>li>a {
     height: calc(100% - 50px);
 }
 
-#avideoModalIframeDiv {
-    display: none;
-    padding: 8px 10px;
-    padding-inline-start: 40px;
+/* Override height for certain swal-modal classes */
+.swal-modal.swal-modal-iframe-full iframe,
+.swal-modal.swal-modal-iframe-full-with-minimize iframe,
+.swal-modal.swal-modal-iframe-full-transparent iframe {
+    height: 100%;
+}
+
+/* Specific styles for swal-modal size variations */
+.swal-modal-iframe-xsmall {
+    width: 640px;
+    height: 480px;
 }
 
 .swal-modal-iframe-small {
     width: 800px;
     height: 600px;
-    max-width: 100%;
-    max-height: 100%;
 }
 
-.swal-modal-iframe-xsmall {
-    width: 640px;
-    height: 480px;
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.swal-modal-iframe-large {
+.swal-modal-iframe-large,
+.swal-modal-iframe-full,
+.swal-modal-iframe-full-with-minimize,
+.swal-modal-iframe-full-transparent {
     width: calc(100% - 50px);
     height: calc(100% - 50px);
     max-width: 100%;
     max-height: 100%;
 }
 
+/* Position and background styles for full screen swal-modal */
 .swal-modal-iframe-full,
 .swal-modal-iframe-full-with-minimize,
 .swal-modal-iframe-full-transparent {
@@ -1311,21 +1338,11 @@ li.dropdown-submenu>ul>li>a {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: calc(100% - 50px);
-    max-width: 100%;
-    max-height: 100%;
 }
 
-.swal-modal.swal-modal-iframe-full iframe,
-.swal-modal.swal-modal-iframe-full-with-minimize iframe,
-.swal-modal.swal-modal-iframe-full-transparent iframe {
-    height: 100%;
-}
-
-.swal-modal-iframe-full-transparent iframe,
+.swal-modal-iframe-full-transparent,
 .swal-modal-iframe-full-transparent .swal-content,
-.swal-modal-iframe-full-transparent {
+.swal-modal-iframe-full-transparent iframe {
     background-color: transparent;
 }
 
@@ -1336,14 +1353,7 @@ li.dropdown-submenu>ul>li>a {
     margin: 0;
 }
 
-.swal-modal.swal-modal-iframe-large .swal-content,
-.swal-modal.swal-modal-iframe-full .swal-content,
-.swal-modal.swal-modal-iframe-full-with-minimize .swal-content,
-.swal-modal-iframe-full-transparent .swal-content {
-    padding: 0;
-    margin: 0;
-}
-
+/* Additional styles */
 .swal-modal-iframe-full-with-maximize-btn {
     display: none;
 }
@@ -1373,6 +1383,13 @@ li.dropdown-submenu>ul>li>a {
 
 .swal-offline-video-compress .swal-modal-logo {
     display: none;
+}
+
+/* Styles related to avideoModalIframeDiv element */
+#avideoModalIframeDiv {
+    display: none;
+    padding: 8px 10px;
+    padding-inline-start: 40px;
 }
 
 /* sm */
@@ -1968,6 +1985,7 @@ button.btn-sm.hamburger svg {
 .HorizontalFlickity .flickity-slider {
     margin: 2px;
 }
+
 .HorizontalFlickity,
 .HorizontalFlickity .flickity-viewport {
     min-height: 50px;
@@ -1980,6 +1998,6 @@ body.ypt-is-compressed #videoCol {
     float: none;
 }
 
-#bigVideoCarousel .galleryVideoButtons button{
+#bigVideoCarousel .galleryVideoButtons button {
     display: inline-block;
 }
