--- a/plugin/Gallery/style.css
+++ b/plugin/Gallery/style.css
@@ -106,6 +106,11 @@ h3.galleryTitle{
     font-size: unset;
 }
 
+.galleryVideo > .galeryDetails{
+    width: calc(100% - 20px);
+    float: left;
+}
+
 .fixPadding{
     padding: 0 5px;
 }
