--- a/view/css/social.css
+++ b/view/css/social.css
@@ -27,6 +27,9 @@ ul.social-network li {
 .social-network a.icoInstagram:hover {
     background-color: #E4405F; 
 }
+.social-network a.icoSpreaker:hover {
+    background-color: #FF0000; 
+}
 .social-network a.icoFacebook:hover {
     background-color: #3B5998;
 }
