--- a/view/css/social.css
+++ b/view/css/social.css
@@ -70,15 +70,25 @@ ul.social-network li {
     background-color: #F16E28;
 }
 .social-network a.icoYoutube:hover {
-    background-color: #FF0000;  /* YouTube's primary color */
+    background-color: #FF0000;  
 }
-
 .social-network a.icoTikTok:hover {
     background-color: #000000;  /* TikTok's primary color is black, but sometimes it's represented with a lighter shade or with the blue from its logo */
 }
-
 .social-network a.icoPatreon:hover {
     background-color: #F96854;  /* Patreon's primary color */
+}
+.social-network a.icoCopy:hover { /* for Website */
+    background-color: #333; /* Using a neutral color since "Website" doesn't have a specific brand color */
+}
+.social-network a.icoApple:hover {
+    background-color: #A3AAAE; /* A neutral Apple gray; Apple often uses white, black, or gray for branding */
+}
+.social-network a.icoPodcast:hover {
+    background-color: #FF2D55; /* Using the Apple Podcast color as it's a commonly recognized color for podcasts */
+}
+.social-network a.icoIMDB:hover {
+    background-color: #E6B91E; /* IMDB's golden yellow color */
 }
 
 
