--- a/view/css/main.css
+++ b/view/css/main.css
@@ -1937,6 +1937,8 @@ button.btn-sm.hamburger svg {
 
 .mainArea .galleryVideo {
     margin-bottom: 1em;
+    border-bottom: solid 1px #CCCCCC99;
+    padding-bottom: 1em;
 }
 
 .ui-menu .ui-menu-item {
