--- a/view/css/main.css
+++ b/view/css/main.css
@@ -2034,6 +2034,10 @@ body.ypt-is-compressed #videoCol {
     border: 2px solid grey;
 }
 
+#topMenuUserNotifications {
+    display: none;
+}
+
 /*
 #_avideoPageLoader{
     display: none !important;
