--- a/view/css/social.css
+++ b/view/css/social.css
@@ -81,6 +81,9 @@ ul.social-network li {
 .social-network a.icoAmazon:hover {
     background-color: #FF9900; 
 }
+.social-network a.icoGoodreads:hover {
+    background-color: #372213; 
+}
 .social-network a.icoCopy:hover { /* for Website */
     background-color: #333; /* Using a neutral color since "Website" doesn't have a specific brand color */
 }
